--- a/UN17.md
+++ b/UN17.md
@@ -25,7 +25,9 @@ The project uses **zero-knowledge proofs (ZKP)** combined with **homomorphic enc
 - **16.10**: It ensures the public has access to information and data while protecting sensitive financial information through encryption.
 
 ### Scalability and Future Potential:
-The system can be adapted to other forms of regulatory compliance, such as **carbon credits**, **financial audits**, and **supply chain certifications**, further promoting accountability and transparency in various sectors.
+The system can be adapted to other forms of regulatory compliance, such as **carbon credits**, **financial audits**, and **supply chain certifications**, further promoting accountability and transparency in various sectors. 
+
+By integrating **self-sovereign identities**, **multi-party computation (MPC)**, and **tokenized compliance incentives**, the platform could evolve to cover global tax systems while enabling cross-border regulatory frameworks. Additional features like **automated attestations** and **decentralized data oracles** could expand its capabilities to offer real-time tax assessments in jurisdictions with complex multi-tiered tax regulations.
 
 ### Conclusion:
 This blockchain-driven solution fosters a fair and just tax system, aligning with **SDG 16** by promoting transparency, strengthening institutions, and ensuring companies comply with tax laws without compromising on privacy. Through its innovative use of cryptography and distributed ledger technology, the project sets a standard for modern tax systems.
